fix(admin): Increase admin wrap width

--- a/src/admin/kudos-admin.css
+++ b/src/admin/kudos-admin.css
@@ -143,7 +143,7 @@
 	}
 
 	.admin-wrap {
-		max-width: 800px;
+		max-width: 1080px;
 		margin: auto;
 	}
 
